src/test/ui/const-generics/infer/uninferred-consts.full.stderr
error[E0282]: type annotations needed
  --> $DIR/uninferred-consts.rs:14:9
   |
LL |     Foo.foo();
   |         ^^^ cannot infer the value of const parameter `N` declared on the associated function `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
